ci: docs are built as part of the quality check